[gd_scene load_steps=43 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/PowerUps/PlayerPowerUps.tres" type="Resource" id=2]
[ext_resource path="res://Entities/Player/Resources/PlayerStats.tres" type="Resource" id=3]
[ext_resource path="res://Entities/Player/Input/PlayerInput.gd" type="Script" id=4]
[ext_resource path="res://Entities/StateManager/StateManager.gd" type="Script" id=5]
[ext_resource path="res://Entities/Player/States/Jump.gd" type="Script" id=6]
[ext_resource path="res://Entities/Player/States/Idle.gd" type="Script" id=7]
[ext_resource path="res://Entities/Player/States/Move.gd" type="Script" id=8]
[ext_resource path="res://Screens/resources/Theme.tres" type="Theme" id=9]
[ext_resource path="res://Entities/Player/States/Falling.gd" type="Script" id=10]
[ext_resource path="res://Entities/Player/States/ReleaseCharge.gd" type="Script" id=11]
[ext_resource path="res://Entities/Player/States/Attack.gd" type="Script" id=12]
[ext_resource path="res://Entities/Boxes/HurtBox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Entities/Boxes/HitBox.tscn" type="PackedScene" id=14]
[ext_resource path="res://Entities/Player/States/Hit.gd" type="Script" id=15]
[ext_resource path="res://Entities/Player/Assets/Player.png" type="Texture" id=16]
[ext_resource path="res://Entities/Player/States/DoubleJump.gd" type="Script" id=17]
[ext_resource path="res://Entities/Player/States/ChargingAttack.gd" type="Script" id=18]
[ext_resource path="res://Entities/Player/States/Dash.gd" type="Script" id=19]
[ext_resource path="res://Entities/Player/Resources/BasicAttack.tres" type="Resource" id=20]
[ext_resource path="res://Entities/Player/Assets/Sparkling2.png" type="Texture" id=21]
[ext_resource path="res://Entities/Player/Assets/Sparkling1.png" type="Texture" id=22]
[ext_resource path="res://Entities/Player/Assets/Sparkling3.png" type="Texture" id=23]
[ext_resource path="res://Entities/Player/Assets/Sparkling4.png" type="Texture" id=24]

[sub_resource type="Animation" id=7]
resource_name = "Attack"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("HitBoxes/AttackHitBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable"
}, {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "ChargingAttack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=14]
resource_name = "ChargingAttackCompleted"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Dash"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("HitBoxes/AttackHitBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable"
}, {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "DoubleJump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Falling"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="Animation" id=13]
resource_name = "ReleaseCharge"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("HitBoxes/AttackHitBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable"
}, {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 14.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 12, 11 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6, 14.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.5, 14.5 )

[sub_resource type="AnimatedTexture" id=19]
frames = 4
fps = 8.0
frame_0/texture = ExtResource( 22 )
frame_1/texture = ExtResource( 21 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 23 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 24 )
frame_3/delay_sec = 0.0

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 0.518182 ), 0.0, 1.23333, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 1 )
stats = ExtResource( 3 )
power_ups = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -25.0
margin_right = 20.0
margin_bottom = -11.0
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 9 )
text = "99"
align = 1
valign = 1

[node name="StateLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -37.0
margin_right = 20.0
margin_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 24, 25 )
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 9 )
text = "STATE"
align = 1
valign = 1

[node name="MessagePos" type="Position2D" parent="."]
position = Vector2( 0, -23 )

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 4 )

[node name="HoldToStartChargeTimer" type="Timer" parent="PlayerInput"]
wait_time = 0.5
one_shot = true

[node name="Timers" type="Node" parent="."]

[node name="ChargeAttackTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="DashColdown" type="Timer" parent="Timers"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 7 )
anims/ChargingAttack = SubResource( 11 )
anims/ChargingAttackCompleted = SubResource( 14 )
anims/Dash = SubResource( 15 )
anims/DoubleJump = SubResource( 12 )
anims/Falling = SubResource( 4 )
anims/Hit = SubResource( 10 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 5 )
anims/Move = SubResource( 6 )
anims/RESET = SubResource( 16 )
anims/ReleaseCharge = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 16 )
hframes = 5
vframes = 6
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1.5 )
shape = SubResource( 1 )

[node name="HitBoxes" type="Node2D" parent="."]

[node name="AttackHitBox" parent="HitBoxes" instance=ExtResource( 14 )]
position = Vector2( 5, 1 )
collision_mask = 4
damage = ExtResource( 20 )

[node name="CollisionShape2D" parent="HitBoxes/AttackHitBox" index="0"]
position = Vector2( 4, 0 )
shape = SubResource( 9 )
disabled = true

[node name="DashHitBox2" parent="HitBoxes" instance=ExtResource( 14 )]
position = Vector2( 5, 1 )
collision_mask = 4
damage = ExtResource( 20 )

[node name="CollisionShape2D" parent="HitBoxes/DashHitBox2" index="0"]
position = Vector2( -2, 0.5 )
shape = SubResource( 18 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 13 )]
position = Vector2( 0, 1 )
collision_layer = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 8 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
texture = SubResource( 19 )
emission_shape = 2
emission_rect_extents = Vector2( 8, 16 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, -10 )
linear_accel = 10.0
linear_accel_random = 1.0
scale_amount = 0.3
scale_amount_curve = SubResource( 17 )

[node name="GroundSensor" type="Node2D" parent="."]
position = Vector2( 0, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="JumpBuffer" type="RayCast2D" parent="GroundSensor"]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 2

[node name="GroundFront" type="RayCast2D" parent="GroundSensor"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="GroundBack" type="RayCast2D" parent="GroundSensor"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="StateManager" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
initial_path = NodePath("Idle")
target_path = NodePath("..")

[node name="Attack" type="Node2D" parent="StateManager"]
script = ExtResource( 12 )

[node name="ChargingAttack" type="Node2D" parent="StateManager"]
script = ExtResource( 18 )

[node name="ReleaseCharge" type="Node2D" parent="StateManager"]
script = ExtResource( 11 )

[node name="Idle" type="Node2D" parent="StateManager"]
script = ExtResource( 7 )

[node name="Move" type="Node2D" parent="StateManager"]
script = ExtResource( 8 )

[node name="Dash" type="Node2D" parent="StateManager"]
script = ExtResource( 19 )

[node name="Jump" type="Node2D" parent="StateManager"]
script = ExtResource( 6 )

[node name="DoubleJump" type="Node2D" parent="StateManager"]
script = ExtResource( 17 )

[node name="Falling" type="Node2D" parent="StateManager"]
script = ExtResource( 10 )

[node name="Hit" type="Node2D" parent="StateManager"]
script = ExtResource( 15 )

[editable path="HitBoxes/AttackHitBox"]
[editable path="HitBoxes/DashHitBox2"]
[editable path="HurtBox"]
